--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -4,7 +4,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{{ renderData.title or title or metadata.title }}</title>
   <script async src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-f68c89cd8cc6-development.min.js" async></script>
+  <!--Data Layer to enable rich data collection and targeting-->
+    <script>
+    var digitalData = {
+        "page": {
+            "pageInfo" : {
+                "pageName": "Home"
+                }
+            }
+    };
+    </script>
+    <!--/Data Layer-->
+    <!--/jQuery-->
+    <!--prehiding snippet for Adobe Target with asynchronous Launch deployment-->
+    <script>
+        (function(g,b,d,f){(function(a,c,d){if(a){var e=b.createElement("style");e.id=c;e.innerHTML=d;a.appendChild(e)}})(b.getElementsByTagName("head")[0],"at-body-style",d);setTimeout(function(){var a=b.getElementsByTagName("head")[0];if(a){var c=b.getElementById("at-body-style");c&&a.removeChild(c)}},f)})(window,document,"body {opacity: 0 !important}",3E3);
+    </script>
+    <!--/prehiding snippet for Adobe Target with asynchronous Launch deployment-->
+    <!--Launch Header Embed Code: REPLACE LINE 39 WITH THE INSTALL CODE FROM YOUR OWN DEVELOPMENT ENVIRONMENT-->
+    <script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-f68c89cd8cc6-development.min.js" async></script>
+    <!--/Launch Header Embed Code-->
   {% set css %}
     {% include "assets/css/inline.css" %}
   {% endset %}
