--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -9,7 +9,7 @@
     var digitalData = {
         "page": {
             "pageInfo" : {
-                "pageName": "Home"
+                "pageName": document.title
                 }
             }
     };
