--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -24,6 +24,14 @@
     <!--Launch Header Embed Code: REPLACE LINE 39 WITH THE INSTALL CODE FROM YOUR OWN DEVELOPMENT ENVIRONMENT-->
     <script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-f68c89cd8cc6-development.min.js" async></script>
     <!--/Launch Header Embed Code-->
+    <script>
+      (function(a,t,c,l,o,u,d){a['_genesysJourneySdk']=o;a[o]=a[o]||function(){
+      (a[o].q=a[o].q||[]).push(arguments)},a[o].l=1*new Date();u=t.createElement(c),
+      d=t.getElementsByTagName(c)[0];u.async=1;u.src=l;u.charset='utf-8';d.parentNode.insertBefore(u,d)
+      })(window, document, 'script', 'https://apps.inintca.com/journey/sdk/js/web/v1/ac.js', 'ac');
+      ac('init', '3d943ccc-9000-47c2-82e3-0044a94c11de', { environment: 'test' });
+      ac('pageview');
+    </script>
   {% set css %}
     {% include "assets/css/inline.css" %}
   {% endset %}
