--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -25,7 +25,47 @@
     <script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-f68c89cd8cc6-development.min.js" async></script>
     <!--/Launch Header Embed Code-->
     <!--Grab the widgets we need -->
-    <script src="https://apps.mypurecloud.com/widgets/9.0/cxbus.min.js" onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadFile('/static/js/widgets-config.js').done(function(){CXBus.loadPlugin('widgets-core')});"></script>
+    <script type="text/javascript">
+        window._genesys = {
+          widgets: {
+            main: {
+              preload: ['webchat'],
+            },
+            webchat: {
+              chatButton: {
+                enabled: true,
+              },
+              transport: {
+                type: 'purecloud-v2-sockets',
+                dataURL: 'https://api.inintca.com',
+                deploymentKey : '5d0f39f0-5f81-4051-be70-837bc6ff8636',
+                orgGuid : '3d943ccc-9000-47c2-82e3-0044a94c11de',
+                interactionData: {
+                  routing: {
+                    targetType: 'QUEUE',
+                    targetAddress: 'SalesAndSupport',
+                    priority: 2
+                  }
+                }
+              }
+            }
+          }
+        };
+
+        const customPlugin = CXBus.registerPlugin('Custom');
+
+        customPlugin.subscribe('WebChatService.started', function (e) {
+          console.log('Chat started', e);
+        });
+
+        customPlugin.subscribe('WebChatService.ended', function (e) {
+          console.log('Chat ended', e);
+        });
+    </script>
+
+    <script src="https://apps.mypurecloud.com/widgets/9.0/cxbus.min.js" onload="javascript:CXBus.configure({debug:false,pluginsPath:'https://apps.mypurecloud.com/widgets/9.0/plugins/'}); CXBus.loadPlugin('widgets-core');"></script>
+
+
     <script>
       (function(a,t,c,l,o,u,d){a['_genesysJourneySdk']=o;a[o]=a[o]||function(){
       (a[o].q=a[o].q||[]).push(arguments)},a[o].l=1*new Date();u=t.createElement(c),
