Why does my analytics not show up?
Have tried to push the adobe lauch setup through the publishing
pipeline and now its gone to the final stage I have replaced
the launch snippe to see what it does.

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -21,8 +21,8 @@
         (function(g,b,d,f){(function(a,c,d){if(a){var e=b.createElement("style");e.id=c;e.innerHTML=d;a.appendChild(e)}})(b.getElementsByTagName("head")[0],"at-body-style",d);setTimeout(function(){var a=b.getElementsByTagName("head")[0];if(a){var c=b.getElementById("at-body-style");c&&a.removeChild(c)}},f)})(window,document,"body {opacity: 0 !important}",3E3);
     </script>
     <!--/prehiding snippet for Adobe Target with asynchronous Launch deployment-->
-    <!--Launch Header Embed Code: REPLACE LINE 39 WITH THE INSTALL CODE FROM YOUR OWN DEVELOPMENT ENVIRONMENT-->
-    <script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-f68c89cd8cc6-development.min.js" async></script>
+    <!--Launch Header Embed Code: PROD-->
+    <script src="//assets.adobedtm.com/645cdc4519e1/f7ca60ac2e35/launch-aa24954aa620.min.js" async></script>
     <!--/Launch Header Embed Code-->
     <!--Grab the widgets we need -->
     <script type="text/javascript">
