fix action state name

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -101,7 +101,7 @@
               case 'started':
                 adobeEventForActionType = 'event13';
                 break;
-              case 'ended':
+              case 'completed':
                 adobeEventForActionType = 'event14';
                 break;
               default:
