add action info to contextData

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -82,36 +82,19 @@
             // s.eVarX = "D=mid"; ?
             
             if (data.conversationId) {
-              s.transactionId = `${data.conversationId}`; // conversationId not available before chat is actually started
-              s.eVar11 = `${data.conversationId}`;
+              evt.conversationId = data.conversationId;
+              s.transactionId = data.conversationId; // conversationId not available before chat is actually started
+              s.eVar11 = data.conversationId;
             }
             
-            // 1st way: record different event for each action state
-            let adobeEventForActionState;
-            switch (evt.actionState) {
-              case 'offered':
-                adobeEventForActionState = 'event10';
-                break;
-              case 'accepted':
-                adobeEventForActionState = 'event11';
-                break;
-              case 'rejected':
-                adobeEventForActionState = 'event12';
-                break;
-              case 'started':
-                adobeEventForActionState = 'event13';
-                break;
-              case 'completed':
-                adobeEventForActionState = 'event14';
-                break;
-              default:
-                console.log(`specific custom event to map action state '${evt.actionState}' is not set up in reporting suite (*1)`);
-            }
-            
-            // 2nd way: keep count of action event and correlate with action state eVar10
             const webActionEventCounter = 'event20';
             const webActionEventCounterSerialized = `event21:${evt.actionId}-${evt.actionState}`;
             s.events = `${adobeEventForActionState},${webActionEventCounter},${webActionEventCounterSerialized}`;
+            
+            s.contextData.actionMediaType = evt.actionMediaType;
+            s.contextData.actionState = evt.actionState;
+            
+            s.contextData.gpe_web_action_event = evt;
             
             s.t();
             console.log(`Marketing cloud visitor id: ${s.marketingCloudVisitorID}`);
