--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -85,6 +85,7 @@
             const webActionEventCounter = 'event20';
 
             s.events = webActionEventCounter;
+            console.log('this here is how we do it');
             _genesys.widgets.webchat = { userData: { mcid: s.marketingCloudVisitorID } }
 
             for ( const prop in evt ) {
