--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -103,7 +103,7 @@
             }
 
             s.t(); // this is pageview call so if org has this call set up to happen for every page in Launch, then this will increment pageview again for same page. use s.tl() here instead? We don't want to increment page views for every webchat state change
-            console.log(`Marketing cloud visitor id: ${s.marketingCloudVisitorID}`);
+            console.log(`Marketing Cloud Visitor ID: ${s.marketingCloudVisitorID}`);
           } else {
             console.log('no analytics found');
           }
