capitalize D in transactionID

--- a/_includes/components/head.njk
+++ b/_includes/components/head.njk
@@ -79,7 +79,7 @@
           if (window.s) {
             if (data.conversationId) {
               evt.conversationId = data.conversationId;
-              s.transactionId = data.conversationId; // conversationId not available before chat is actually started
+              s.transactionID = data.conversationId; // conversationId not available before chat is actually started
               s.eVar11 = data.conversationId;
             }
             
